k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: leads-prod
  labels:
    app: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
